# SatelliteAgent

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.sh
agent/: lfm2_agent.py  lfm2_tool_parser.py  providers.py  react_loop.py  react_loop_openai.py
app/: server.py
config/: catalog_regions.yaml  providers.yaml
data/: README.md  canonical_dataset.yaml  eval_hf.jsonl  eval_hf_simsat.jsonl  eval_precursor_hf.jsonl  eval_precursor_hf_simsat.jsonl  scene_catalog.yaml
docs/: DATASET_V3.md  EXPERIMENT_PLAN.md  INTEGRATION_LFM2VL.md  REMOTE_DEPLOY.md  REPRO_PLAN.md  TOOL_SPEC.md  feat_toolcall.md
kaggle/: .gitignore  DATA_SPEC.md  EXPERIMENT_PLAN.md  EXPERIMENT_SUMMARY.md  RUNBOOK.md
satelliteagent_env/: README.md  __init__.py
scripts/: auto_fill_pairs.py  auto_phase2.py  build_precompute.py  build_precompute_v2.py  build_scene_catalog.py  collect_agent_traces.py  collect_algal_bloom.py  collect_deforestation.py  collect_ems.py  collect_fireedge_hf.py  collect_fireguard_precursor.py  collect_firms_fire.py  collect_hard_negatives.py  collect_negatives.py  collect_negatives_v2.py  collect_volcanic.py  download_models.sh  dump_wildfire_composites.py  eval_wildfire.py  eval_wildfire_hf.py  eval_wildfire_hf_simsat.py  eval_wildfire_precursor_hf.py  eval_wildfire_precursor_hf_simsat.py  mcd64a1_smoke.py  prewarm_cache.py  refresh_burn_dates.py  serve_vllm_lfm2.sh  smoke_test.sh  sync_cache.sh
serve_lfm/: docker-compose.yaml  requirements.txt
serve_lfm2/: Dockerfile
simsat_client/: __init__.py  sentinel.py
tools/: classifier_gemini.py  (+11 more)
(+280 files in other folders)
